--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -2,3 +2,6 @@ $text-color: #f1ffff;
 
 $body-color-top: #5197E3;
 $body-color-bottom: #86B8F2;
+
+$progress-ongoing-color: #1D50D9;
+$progress-finished-color: #28D84A;
