--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -4,4 +4,4 @@ $body-color-top: #5197E3;
 $body-color-bottom: #86B8F2;
 
 $progress-ongoing-color: #1D50D9;
-$progress-finished-color: #28D84A;
+$progress-completed-color: #28D84A;
